[package]
name = "triggercd"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
futures-util = "0.3.13"
log = "0.4.14"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time", "process"] }
tokio-tungstenite = "0.14.0"
